fix many stuffs int the usage stats. checked the visualization on IE, Safari, Firefox, Chrome (Windows and Mac)

--- a/metashare/media/css/view_stats.css
+++ b/metashare/media/css/view_stats.css
@@ -9,6 +9,7 @@
     border-bottom: none; 
     -moz-border-radius: 5px 5px 0 0; 
     -webkit-border-radius: 5px 5px 0 0;
+	-khtml-border-radius: 5px 5px 0 0;
 }
 
 .tab a {font-family: Tahoma,Arial;
@@ -35,6 +36,7 @@
     padding: 10px; 
     -moz-border-radius: 0 5px 5px 5px; 
     -webkit-border-radius: 0 5px 5px 5px;
+    -khtml-border-radius: 0 5px 5px 5px;
 }
 
 .tab.tab-nobr { background: #fff; 
@@ -69,6 +71,7 @@ div.coverage {
     border-top: none; 
     border-right: 1px solid #999; 
     border-left: none; 
+    width: auto;
 }
 
 div.required { background-color: lightgreen }
@@ -77,8 +80,16 @@ div.recommended { background-color: orange }
 div.fieldvalues {background: #E6E6FA; 
     border: 1px solid #000; 
     float: right;
-    width: 540px;
-    vertical-align: top}
+    width: 570px;
+    padding: 0px;
+    margin-top: 20px;
+    margin-left: 10px;
+    margin-right: 10px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    vertical-align: top       
+}
+    
 div.warning {background: lightyellow; 
     border: 1px solid #000; 
     position:relative; 
@@ -106,12 +117,13 @@ label.indent {margin-left: 19px;
 }
 
 label.component{
-        padding:3px;
-        background-color: #fff;
-        border-radius:10px;
-        font-size:12px;
-        color: #666;
-        cursor: pointer
+    padding:3px;
+    background-color: #fff;
+    border-radius:10px;
+    font-size:14px;
+    color: #666;
+    cursor: pointer;
+    color: rgb(255, 153, 0);
 }
 
 
@@ -126,3 +138,24 @@ a.addFilter:before {
     vertical-align: top;   
 }
 
+#colsubtab {
+width: auto;
+position: relative;
+margin-left: 10px;
+margin-right: 10px;
+white-space:normal;
+display:INLINE-block;
+vertical-align: top;
+}
+
+#subtab div {
+   margin-left:3px;
+}
+
+#subtab{
+width: 100%;
+margin-bottom: 10px;
+white-space:nowrap;
+position:relative;
+display:block;
+}
